css/image_collage.css
#image-collage-grid ul li{
    display:block;
    float:left;
    list-style-type:none;
    margin:0;
}
div#image-collage-grid ul {
    margin-left:0;
    padding:0;
}
#image-collage-grid {
    width:960px;
    margin-left:auto;
    margin-right:auto;
}
#image-collage-grid li img {
    margin:0;
    padding:0;
    width:100px;
    height:100px;
    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
}
#image-collage-grid .img-block:hover img {
  filter: none;
  -webkit-filter: grayscale(0%);
  cursor:pointer;
}
#image-collage-grid li .quote,#image-collage-grid li .quote-bg {
    display:none;
}
#image-collage-grid .img-block .quote, #image-collage-grid .img-block .quote-bg {
    z-index:200;
    color:white;
    vertical-align:middle;
    background:transparent;
    padding:2em 1em;
    font-style:italic;
    font-weight:bold;
    box-sizing:border-box;
    -moz-box-sizing:border-box;
}
#image-collage-grid .img-block .quote {
    padding-top:0;
    margin-top:2em;
}
#image-collage-grid .img-block:hover .quote, #image-collage-grid .img-block:hover .quote-bg {
    display:table-cell;
    position:absolute;
    top:0;
    left:0;
    
}
#image-collage-grid.overlay-inactive .img-block .quote-bg {
    opacity:0.9;
    background:#6B0103;
}
#image-collage-grid {
    position:relative;
    font-family:'arial';
}
#image-collage-grid .overlay, .image-collage-overlay-bg {
    display:none;
    position:absolute;
    top:0;
    left:0;
    color:white;
}
#image-collage-grid .overlay p {
    color:#ffffff;
}
#image-collage-grid .overlay  p {
    margin-top:0;
    margin-bottom:1em;
}
#image-collage-grid .image-collage-overlay-bg {
    z-index:50;
}
#image-collage-grid .image-collage-overlay-container {
    z-index:150;
    position:relative;
}
.image-collage-overlay-bg {
    background:#6B0103;
    height:400px;
    width:3000px;
    margin-left:-1000px;
    opacity:0.9;
}
#image-collage-grid .image-collage-overlay-right {
    width:63%;
    box-sizing:border-box;
    -moz-box-sizing:border-box;
    padding:0 1em;
    float:left;
}
#image-collage-grid .image-collage-overlay-left {
    width:27%;
    padding:1em;
    box-sizing:border-box;
    -moz-box-sizing:border-box;
    float:left;
}
#image-collage-grid .image-collage-overlay-thumbnail img {
    width:180px;
    padding:5px;
    border-radius:50%;
    margin-top:-2em;
    background:white;
    border:1px solid #ddd;
    height:auto;
    margin-left:auto;
    margin-right:auto;
    display:block;
    float:none;
    max-width:100%;
}
#image-collage-grid .image-collage-details {
    text-align:center;
    clear:both;
    margin-top:0.5em;
}
#image-collage-grid .image-collage-details span {
    display:block;
    margin:1em 0;
}
#image-collage-grid .image-collage-name {
    font-weight:bold;
}
#image-collage-grid .image-collage-tagline {
    font-style:italic;
}
#image-collage-grid .image-collage-overlay-thumbnail {
    display:block;
    margin-left:auto;
    margin-right:auto;
}
#image-collage-grid .close-btn {
    display:block;
    background:white;
    padding:10px;
    float:right;
    font-size:18px;
    cursor:pointer;
    color:#6B0103;
    
}
#image-collage-grid .quote .close-btn {
    font-size: 16px;
    line-height: 12px;
    padding: 5px;
    position: absolute;
    right: 5px;
    top: -10px;
    cursor:pointer;
    z-index: 800;
    display:none;
}
#image-collage-grid .quote .image-collage-overlay-thumbnail img{
    margin:-1em auto 0.5em;
}

/*
 * Flexslider Specific
 */
#image-collage-grid .flex-direction-nav {
    position:absolute;
    top:50%;
    width:100%;
}
#image-collage-grid .flex-direction-nav a {
    -webkit-transition: none;
    opacity:1;
}
#image-collage-grid .flex-direction-nav li a:before {
    background: #6B0103;
    border-radius: 50%;
    color: #fff;
    width: 40px;
    line-height: 40px;
    text-align: center;
    opacity:1;
    font-weight:light;
    font-size:18px;
}
#image-collage-grid .flex-direction-nav li {
    float:none;
}
#image-collage-grid .flexslider:hover .flex-prev, .flexslider:hover .flex-next {
    opacity:1;
}
#image-collage-grid .flexslider .flex-next {
    right:10px;
}
#image-collage-grid .flexslider .flex-prev {
    left:10px;
}
#image-collage-grid .flexslider .flex-disabled {
    opacity:1!important;
}
#image-collage-grid .flex-direction-nav {
    position:absolute;
    height:1px;
    width:100%;
}
#image-collage-grid .flex-direction-nav.inactive {
    display:none;
}
#image-collage-grid .image-collage-name, #image-collage-grid .quote img {
    display:none;
}
@media all and (max-width:1024px) {
    #image-collage-grid {
        width:800px;
    }
}
@media all and (max-width:900px) {
    #image-collage-grid {
        width:640px;
    }
    #image-collage-grid ul.slides li, #image-collage-grid ul {
        position:static;
    }
    #image-collage-grid .img-block .quote.active,#image-collage-grid .img-block .quote-bg.active {
        position:absolute;
        height:320px!important;
        width:640px!important;
        top:0!important;
        left:0!important;
        display:table-cell;
        
    }
    #image-collage-grid .img-block:hover .quote.active,#image-collage-grid .img-block:hover .quote-bg.active {
        display:table-cell;
    }
    #image-collage-grid .img-block:hover .quote ,#image-collage-grid .img-block:hover .quote-bg {
        display:none;
    }
    #image-collage-grid .quote .close-btn {
        display:block;
    }
    
    #image-collage-grid .image-collage-name, #image-collage-grid .quote img {
        display:block;
    }
}
@media all and (max-width:700px) {
    #image-collage-grid {
        width:480px;
    }
    #image-collage-grid .img-block .quote.active,#image-collage-grid .img-block .quote-bg.active {
        width:480px!important;
    }
}
@media all and (max-width:500px) {
    #image-collage-grid {
        width:320px;
    }
    
    #image-collage-grid .img-block .quote.active,#image-collage-grid .img-block .quote-bg.active {
        width:320px!important;
    }
}

